Negative z-index fixes column layout bug in Chrome 38

--- a/built/chondric.css
+++ b/built/chondric.css
@@ -466,7 +466,6 @@ button.icon-only {
 
 .cjs-scrolling-window .body {
   position: static;
-  -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
@@ -786,7 +785,6 @@ content: "";
 .icon-left::before {
   content: "?";
   display: inline-block;
-  -webkit-background-size: contain;
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
@@ -800,7 +798,6 @@ content: "";
 .icon-right::after {
   content: "?";
   display: inline-block;
-  -webkit-background-size: contain;
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
@@ -899,7 +896,7 @@ content: "";
 .cjs-loading-overlay.ui-hide {
   -webkit-transition: z-index 0.5s ease, opacity 0.3s ease;
   transition: z-index 0.5s ease, opacity 0.3s ease;
-  z-index: 0;
+  z-index: -1;
 }
 
 .cjs-loaded {
@@ -1005,7 +1002,6 @@ content: "";
   height: 1.5em;
   border-radius: .2em;
   background: #eee;
-  -webkit-box-shadow: 0 3.5em #eee;
   box-shadow: 0 3.5em #eee;
   /* container height - part height */
   -webkit-transform-origin: 50% 2.5em;
@@ -1361,7 +1357,6 @@ content: "";
 .sidepanel .body button.menutile {
   width: 100%;
   margin: 5px 0;
-  -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   border: none;
